codegen/tests/ui/main/duplicate-main-fn.rs
#[klyra_codegen::main]
async fn main() -> KlyraRocket {}
